[package]
name = "moka-py"
version = "0.2.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "moka_py"
crate-type = ["cdylib"]

[dependencies]
ahash = "0.8.12"
moka = { version = "0.12", features = ["sync"] }
pyo3 = { version = "0.26", features = ["generate-import-lib"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
